--- a/Chapter9.ipynb
+++ b/Chapter9.ipynb
@@ -45,7 +45,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -74,7 +74,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -161,8 +161,9 @@
                 "        spans = spans + [[-1, -1]] * (sequence_length - len(spans))\n",
                 "\n",
                 "        # 引数に応じてtorch.Tensor型に返還\n",
+                "        # 次元を追加する必要がある\n",
                 "        if return_tensors == 'pt':\n",
-                "            encoding = {key: torch.tensor(value) for key, value in encoding.items()}\n",
+                "            encoding = {key: torch.tensor([value]) for key, value in encoding.items()}\n",
                 "        \n",
                 "        return (encoding, spans)\n",
                 "    \n",
@@ -215,7 +216,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 16,
             "metadata": {
                 "id": "HBTlINuoGXNc"
             },
@@ -247,7 +248,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 17,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -263,7 +264,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 18,
             "metadata": {},
             "outputs": [
                 {
@@ -291,7 +292,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -305,18 +306,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 20,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "{'input_ids': tensor([    2,   759, 18204,    11,  4618,    15,    10,     3]),\n",
-                            " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0]),\n",
-                            " 'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1])}"
+                            "{'input_ids': tensor([[    2,   759, 18204,    11,  4618,    15,    10,     3]]),\n",
+                            " 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0]]),\n",
+                            " 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1]])}"
                         ]
                     },
-                    "execution_count": 17,
+                    "execution_count": 20,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -327,7 +328,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 21,
             "metadata": {},
             "outputs": [
                 {
@@ -336,7 +337,7 @@
                             "[[-1, -1], [0, 2], [2, 7], [7, 8], [8, 10], [10, 11], [11, 12], [-1, -1]]"
                         ]
                     },
-                    "execution_count": 18,
+                    "execution_count": 21,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -396,59 +397,108 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "id": "zCFGE4xbGXNe",
-                "jupyter": {
-                    "outputs_hidden": false
-                }
-            },
-            "outputs": [],
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
             "source": [
-                "# 9-9\n",
-                "bert_mlm = BertForMaskedLM.from_pretrained(MODEL_NAME)\n",
-                "bert_mlm = bert_mlm.cuda()"
+                "`transformers.BertForMaskedLM`クラスを用いる。このクラスは各トークンに対してその市に入るトークンを語彙の中から選ぶもので、これは`transformers.BertForTokenClassification`でラベル数を語彙数としたものと入出力関係が同じと考えることができる。<br>\n",
+                "一方で、`transformers.BertForMaskedLM`は、事前学習でランダムに選ばれたトークンを`[MASK]`もしくはランダムなトークンに置き換え、またはそのままで、元のトークンが何であったかを予測するという学習が行われる。これは、文章校正タスクと類似しており、分類器の初期パラメータとして事前学習により得られたものを用いる`transformers.BertForMaskedLM`のほうが、`transformers.BertForTokenClassification`と比較してある程度妥当なパラメータを備えていることが期待されるためである。これにより、ファインチューニングの学習時間の短縮が期待できる。"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "id": "J2DR-ls8GXNf"
-            },
+            "execution_count": 24,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "Some weights of the model checkpoint at cl-tohoku/bert-base-japanese-whole-word-masking were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+                        "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+                        "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# 9-9\n",
+                "\n",
+                "model_name = 'cl-tohoku/bert-base-japanese-whole-word-masking'\n",
+                "model = BertForMaskedLM.from_pretrained(model_name)\n",
+                "model = model.cuda()"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "文章の符号化から予測された文章の出力までは、以下のように実装する。"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 26,
+            "metadata": {},
             "outputs": [],
             "source": [
                 "# 9-10\n",
-                "text = '優勝トロフィーを変換した。'\n",
                 "\n",
-                "# 符号化とともに各トークンの文章中の位置を計算しておく。\n",
+                "text = \"優勝トロフィーを変換した。\"\n",
+                "\n",
+                "# 符号化およびトークンの文章中の位置を取得\n",
                 "encoding, spans = tokenizer.encode_plus_untagged(\n",
                 "    text, return_tensors='pt'\n",
                 ")\n",
-                "encoding = { k: v.cuda() for k, v in encoding.items() }\n",
+                "encoding = {key: value.cuda() for key, value in encoding.items()}\n",
                 "\n",
-                "# BERTに入力し、トークン毎にスコアの最も高いトークンのIDを予測値とする。\n",
+                "# BERTに入力\n",
                 "with torch.no_grad():\n",
-                "    output = bert_mlm(**encoding)\n",
-                "    scores = output.logits\n",
-                "    labels_predicted = scores[0].argmax(-1).cpu().numpy().tolist()\n",
-                "    \n",
-                "# ラベル列を文章に変換\n",
-                "predict_text = tokenizer.convert_bert_output_to_text(\n",
-                "    text, labels_predicted, spans\n",
+                "    output = model(**encoding)\n",
+                "scores = output.logits\n",
+                "labels_pred = scores[0].argmax(axis=1).cpu().numpy().tolist()\n",
+                "\n",
+                "text_pred = tokenizer.convert_output_to_text(\n",
+                "    text, labels_pred, spans\n",
                 ")"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "id": "Wc0mIVlnGXNf"
-            },
+            "execution_count": 28,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "'優勝トロフィーを獲得した。'"
+                        ]
+                    },
+                    "execution_count": 28,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "text_pred"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "次に、誤変換した文章と正しい文章をBERTに入力して損失を計算する。入力時に、それぞれの文章を符号化し、正しい文章についてはラベル列を正とする。`tokenizer.encode_plus_tagged()`を用いることで、ラベル列を含んだデータを作成できる。"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 30,
+            "metadata": {},
             "outputs": [],
             "source": [
                 "# 9-11\n",
+                "\n",
                 "data = [\n",
                 "    {\n",
                 "        'wrong_text': '優勝トロフィーを変換した。',\n",
@@ -460,8 +510,8 @@
                 "    }\n",
                 "]\n",
                 "\n",
-                "# 各データを符号化し、データローダへ入力できるようにする。\n",
-                "max_length=32\n",
+                "# データの符号化\n",
+                "max_length = 32\n",
                 "dataset_for_loader = []\n",
                 "for sample in data:\n",
                 "    wrong_text = sample['wrong_text']\n",
@@ -469,41 +519,94 @@
                 "    encoding = tokenizer.encode_plus_tagged(\n",
                 "        wrong_text, correct_text, max_length=max_length\n",
                 "    )\n",
-                "    encoding = { k: torch.tensor(v) for k, v in encoding.items() }\n",
+                "    encoding = {key: torch.tensor(value) for key, value in encoding.items()}\n",
                 "    dataset_for_loader.append(encoding)\n",
                 "\n",
-                "# データローダを作成\n",
-                "dataloader = DataLoader(dataset_for_loader, batch_size=2)\n",
-                "\n",
-                "# ミニバッチをBERTへ入力し、損失を計算。\n",
-                "for batch in dataloader:\n",
-                "    encoding = { k: v.cuda() for k, v in batch.items() }\n",
-                "    output = bert_mlm(**encoding)\n",
-                "    loss = output.loss # 損失"
+                "dataloader = DataLoader(dataset_for_loader, batch_size=2)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 31,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "for batch in dataloader:\n",
+                "    encoding = {key: value.cuda() for key, value in batch.items()}\n",
+                "    output = model(**encoding)\n",
+                "    loss = output.loss"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 32,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "tensor(13.2660, device='cuda:0', grad_fn=<NllLossBackward0>)"
+                        ]
+                    },
+                    "execution_count": 32,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "loss"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 9.4 日本語Wikipedia誤りデータセット\n",
+                "\n",
+                "本章では、京都大学の言語メディア研究室が作成した[日本語Wikipedia誤りデータセット](\"https://nlp.ist.i.kyoto-u.ac.jp/?%E6%97%A5%E6%9C%AC%E8%AA%9EWikipedia%E5%85%A5%E5%8A%9B%E8%AA%A4%E3%82%8A%E3%83%87%E3%83%BC%E3%82%BF%E3%82%BB%E3%83%83%E3%83%88\")を用いて学習を行う。このデータセットは、日本語Wikipediaの差分から間違った文章と正しい文章のペアを抽出している。"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 34,
             "metadata": {},
             "outputs": [],
             "source": [
                 "# 9-2\n",
                 "\n",
-                "os.makedirs(\"/data/chapter9\")"
+                "os.makedirs(\"data/chapter9\", exist_ok=True)"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "データセットをダウンロードする。"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "id": "V0KBJLE4GXNg"
-            },
-            "outputs": [],
+            "execution_count": 43,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+                        "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+                        "100   249  100   249    0     0   2554      0 --:--:-- --:--:-- --:--:--  2567\n",
+                        "100 94.0M  100 94.0M    0     0  1666k      0  0:00:57  0:00:57 --:--:-- 2283k42 39.7M    0     0  1764k      0  0:00:54  0:00:23  0:00:31 1650k\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 9-12\n",
-                "!curl -L \"https://nlp.ist.i.kyoto-u.ac.jp/DLcounter/lime.cgi?down=https://nlp.ist.i.kyoto-u.ac.jp/nl-resource/JWTD/jwtd.tar.gz&name=JWTD.tar.gz\" -o JWTD.tar.gz\n",
-                "!tar zxvf JWTD.tar.gz"
+                "\n",
+                "!curl -o \"data/chapter9/jwtd.tar.gz\" -L \"https://nlp.ist.i.kyoto-u.ac.jp/DLcounter/lime.cgi?down=https://nlp.ist.i.kyoto-u.ac.jp/nl-resource/JWTD/jwtd_v2.0.tar.gz&name=JWTDv2.0.tar.gz\"\n",
+                "!cd \"data/chapter9\" && tar -zxf \"jwtd.tar.gz\""
             ]
         },
         {
