メモ追加#9-13まで

--- a/Chapter9.ipynb
+++ b/Chapter9.ipynb
@@ -45,7 +45,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 89,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -57,6 +57,7 @@
                 "import pandas as pd\n",
                 "from tqdm import tqdm\n",
                 "import pprint\n",
+                "import math\n",
                 "\n",
                 "import torch\n",
                 "from torch.utils.data import DataLoader\n",
@@ -74,7 +75,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 90,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -216,7 +217,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 91,
             "metadata": {
                 "id": "HBTlINuoGXNc"
             },
@@ -248,7 +249,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 92,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -264,7 +265,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 93,
             "metadata": {},
             "outputs": [
                 {
@@ -292,7 +293,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 94,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -306,7 +307,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 95,
             "metadata": {},
             "outputs": [
                 {
@@ -317,7 +318,7 @@
                             " 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1]])}"
                         ]
                     },
-                    "execution_count": 20,
+                    "execution_count": 95,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -328,7 +329,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 96,
             "metadata": {},
             "outputs": [
                 {
@@ -337,7 +338,7 @@
                             "[[-1, -1], [0, 2], [2, 7], [7, 8], [8, 10], [10, 11], [11, 12], [-1, -1]]"
                         ]
                     },
-                    "execution_count": 21,
+                    "execution_count": 96,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -356,7 +357,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 97,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -370,7 +371,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 98,
             "metadata": {},
             "outputs": [
                 {
@@ -379,7 +380,7 @@
                             "'優勝トロフィーを返還した'"
                         ]
                     },
-                    "execution_count": 23,
+                    "execution_count": 98,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -407,7 +408,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 99,
             "metadata": {},
             "outputs": [
                 {
@@ -438,7 +439,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 100,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -465,7 +466,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 101,
             "metadata": {},
             "outputs": [
                 {
@@ -474,7 +475,7 @@
                             "'優勝トロフィーを獲得した。'"
                         ]
                     },
-                    "execution_count": 28,
+                    "execution_count": 101,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -493,7 +494,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 102,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -527,7 +528,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
+            "execution_count": 103,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -539,7 +540,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 32,
+            "execution_count": 104,
             "metadata": {},
             "outputs": [
                 {
@@ -548,7 +549,7 @@
                             "tensor(13.2660, device='cuda:0', grad_fn=<NllLossBackward0>)"
                         ]
                     },
-                    "execution_count": 32,
+                    "execution_count": 104,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -564,12 +565,14 @@
             "source": [
                 "## 9.4 日本語Wikipedia誤りデータセット\n",
                 "\n",
-                "本章では、京都大学の言語メディア研究室が作成した[日本語Wikipedia誤りデータセット](\"https://nlp.ist.i.kyoto-u.ac.jp/?%E6%97%A5%E6%9C%AC%E8%AA%9EWikipedia%E5%85%A5%E5%8A%9B%E8%AA%A4%E3%82%8A%E3%83%87%E3%83%BC%E3%82%BF%E3%82%BB%E3%83%83%E3%83%88\")を用いて学習を行う。このデータセットは、日本語Wikipediaの差分から間違った文章と正しい文章のペアを抽出している。"
+                "本章では、京都大学の言語メディア研究室が作成した[日本語Wikipedia誤りデータセット](\"https://nlp.ist.i.kyoto-u.ac.jp/?日本語Wikipedia入力誤りデータセット\")を用いて学習を行う。このデータセットは、日本語Wikipediaの差分から間違った文章と正しい文章のペアを抽出している。\n",
+                "\n",
+                "まずは、データセット(v2.0)をダウンロードする。"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 34,
+            "execution_count": 105,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -579,16 +582,8 @@
             ]
         },
         {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "データセットをダウンロードする。"
-            ]
-        },
-        {
             "cell_type": "code",
-            "execution_count": 43,
+            "execution_count": 110,
             "metadata": {},
             "outputs": [
                 {
@@ -597,106 +592,133 @@
                     "text": [
                         "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
                         "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-                        "100   249  100   249    0     0   2554      0 --:--:-- --:--:-- --:--:--  2567\n",
-                        "100 94.0M  100 94.0M    0     0  1666k      0  0:00:57  0:00:57 --:--:-- 2283k42 39.7M    0     0  1764k      0  0:00:54  0:00:23  0:00:31 1650k\n"
+                        "100   249  100   249    0     0   2480      0 --:--:-- --:--:-- --:--:--  2490\n",
+                        " 17 94.0M   17 16.0M    0     0  1905k      0  0:00:50  0:00:08  0:00:42 1890k"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "100 94.0M  100 94.0M    0     0  1823k      0  0:00:52  0:00:52 --:--:-- 2291k\n"
                     ]
                 }
             ],
             "source": [
                 "# 9-12\n",
                 "\n",
-                "!curl -o \"data/chapter9/jwtd.tar.gz\" -L \"https://nlp.ist.i.kyoto-u.ac.jp/DLcounter/lime.cgi?down=https://nlp.ist.i.kyoto-u.ac.jp/nl-resource/JWTD/jwtd_v2.0.tar.gz&name=JWTDv2.0.tar.gz\"\n",
+                "!curl -o \"data/chapter9/jwtd.tar.gz\" \"https://nlp.ist.i.kyoto-u.ac.jp/nl-resource/JWTD/jwtd_v2.0.tar.gz&name=JWTDv2.0.tar.gz\"\n",
                 "!cd \"data/chapter9\" && tar -zxf \"jwtd.tar.gz\""
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "本データセットはJSON形式で、`pre_text`に修正前の文章、`post_text`に修正後の文章が格納されている。\n",
+                "さらに、`diffs`配列の中の`category`に入力誤りの種類(誤字、脱字など)が、`pre_str`が修正前、`post_str`が修正後の単語が格納されている。\n",
+                "\n",
+                "本章では漢字誤変換のみを扱う。`category`が`kanji-conversion_a`となっているもののみを利用する。\n",
+                "\n",
+                "まずデータを読み込む。"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "id": "Z-lflu5sGXNg",
-                "jupyter": {
-                    "outputs_hidden": false
+            "execution_count": 107,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+                        "The tokenizer class you load from this checkpoint is 'BertJapaneseTokenizer'. \n",
+                        "The class this function is called from is 'SC_tokenizer'.\n"
+                    ]
                 }
-            },
-            "outputs": [],
+            ],
             "source": [
                 "# 9-13\n",
-                "def create_dataset(data_df):\n",
                 "\n",
-                "    tokenizer = SC_tokenizer.from_pretrained(MODEL_NAME)\n",
+                "model_name = 'cl-tohoku/bert-base-japanese-whole-word-masking'\n",
+                "tokenizer = SC_tokenizer.from_pretrained(model_name)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 112,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "category_type = 'kanji-conversion_a'\n",
                 "\n",
-                "    def check_token_count(row):\n",
+                "def create_dataset(data_df: pd.DataFrame) -> dict:\n",
+                "    def _check_category(lst: list) -> bool:\n",
                 "        \"\"\"\n",
-                "        誤変換の文章と正しい文章でトークンに対応がつくかどうかを判定。\n",
-                "        （条件は上の文章を参照）\n",
+                "        data_df.diffsを走査して、\n",
+                "        - listの長さが2以下\n",
+                "        - すべてのcategoryがkanji-conversion_a\n",
+                "        のすべてを満たすときにTrue、そうでないときにFalseを返す\n",
                 "        \"\"\"\n",
-                "        wrong_text_tokens = tokenizer.tokenize(row['wrong_text'])\n",
-                "        correct_text_tokens = tokenizer.tokenize(row['correct_text'])\n",
-                "        if len(wrong_text_tokens) != len(correct_text_tokens):\n",
-                "            return False\n",
-                "        \n",
-                "        diff_count = 0\n",
-                "        threthold_count = 2\n",
-                "        for wrong_text_token, correct_text_token \\\n",
-                "            in zip(wrong_text_tokens, correct_text_tokens):\n",
+                "        checked_lst = [dct['category'] == category_type for dct in lst]\n",
+                "        category_bool =  math.prod(checked_lst) # リスト内を掛け算してFalseがあれば0が返る\n",
+                "        length_bool = len(checked_lst) <= 2\n",
+                "        return bool(category_bool * length_bool)\n",
                 "\n",
-                "            if wrong_text_token != correct_text_token:\n",
-                "                diff_count += 1\n",
-                "                if diff_count > threthold_count:\n",
-                "                    return False\n",
-                "        return True\n",
-                "\n",
-                "    def normalize(text):\n",
+                "    def _normalize(text: str) -> str:\n",
                 "        \"\"\"\n",
-                "        文字列の正規化\n",
+                "        文字列の正規化を行う\n",
                 "        \"\"\"\n",
-                "        text = text.strip()\n",
-                "        text = unicodedata.normalize('NFKC', text)\n",
-                "        return text\n",
+                "        text = text.strip() # 改行文字や全角スペースを取り除く\n",
+                "        return unicodedata.normalize('NFKC', text) # NFKCで正規化\n",
                 "\n",
-                "    # 漢字の誤変換のデータのみを抜き出す。\n",
-                "    category_type = 'kanji-conversion'\n",
-                "    data_df.query('category == @category_type', inplace=True) \n",
-                "    data_df.rename(\n",
-                "        columns={'pre_text': 'wrong_text', 'post_text': 'correct_text'}, \n",
-                "        inplace=True\n",
-                "    )\n",
-                "    \n",
-                "    # 誤変換と正しい文章をそれぞれ正規化し、\n",
-                "    # それらの間でトークン列に対応がつくもののみを抜き出す。\n",
-                "    data_df['wrong_text'] = data_df['wrong_text'].map(normalize) \n",
-                "    data_df['correct_text'] = data_df['correct_text'].map(normalize)\n",
-                "    kanji_conversion_num = len(data_df)\n",
-                "    data_df = data_df[data_df.apply(check_token_count, axis=1)]\n",
-                "    same_tokens_count_num = len(data_df)\n",
-                "    print(\n",
-                "        f'- 漢字誤変換の総数：{kanji_conversion_num}',\n",
-                "        f'- トークンの対応関係のつく文章の総数: {same_tokens_count_num}',\n",
-                "        f'  (全体の{same_tokens_count_num/kanji_conversion_num*100:.0f}%)',\n",
-                "        sep = '\\n'\n",
-                "    )\n",
-                "    return data_df[['wrong_text', 'correct_text']].to_dict(orient='records')\n",
+                "    # data_df.diffsのtypeをobject -> listに変換\n",
+                "    data_df.diffs = data_df.diffs.apply(lambda x: list(x))\n",
                 "\n",
-                "# データのロード\n",
-                "train_df = pd.read_json(\n",
-                "    './jwtd/train.jsonl', orient='records', lines=True\n",
-                ")\n",
-                "test_df = pd.read_json(\n",
-                "    './jwtd/test.jsonl', orient='records', lines=True\n",
-                ")\n",
+                "    # data_dfからcategoryがkanji-conversion_aかつ誤変換が2以下の文章のみを抜き出す\n",
+                "    data_df = data_df[data_df['diffs'].apply(_check_category)].copy()\n",
                 "\n",
-                "# 学習用と検証用データ\n",
-                "print('学習と検証用のデータセット：')\n",
-                "dataset = create_dataset(train_df)\n",
-                "random.shuffle(dataset)\n",
-                "n = len(dataset)\n",
-                "n_train = int(n*0.8)\n",
-                "dataset_train = dataset[:n_train]\n",
-                "dataset_val = dataset[n_train:]\n",
+                "    # 文章の正規化\n",
+                "    data_df.pre_text = data_df.pre_text.apply(_normalize)\n",
+                "    data_df.post_text = data_df.post_text.apply(_normalize)\n",
                 "\n",
-                "# テストデータ\n",
-                "print('テスト用のデータセット：')\n",
-                "dataset_test = create_dataset(test_df)"
+                "    return data_df[['pre_text', 'post_text']].to_dict(orient='records')"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 113,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# データセットを読み込んで加工する\n",
+                "dir_path = \"data/chapter9/jwtd_v2.0/\"\n",
+                "train_df = pd.read_json(dir_path+\"train.jsonl\", orient='records', lines=True)\n",
+                "test_df = pd.read_json(dir_path+\"test.jsonl\", orient='records', lines=True)\n",
+                "\n",
+                "# train/val\n",
+                "tmp_dataset = create_dataset(train_df)\n",
+                "random.shuffle(tmp_dataset)\n",
+                "train_size = int(len(tmp_dataset) * 0.8)\n",
+                "train_dataset = tmp_dataset[:train_size]\n",
+                "val_dataset = tmp_dataset[train_size:]\n",
+                "# test\n",
+                "test_dataset = create_dataset(test_df)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 9.5 ファインチューニング"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "ファインチューニングのためのデータローダを定義する。"
             ]
         },
         {
